<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distance_rs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xavier1@todo.todo">xavier1</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>eigen</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>librealsense2</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_updater</depend>

  <exec_depend>launch_ros</exec_depend>
  <build_depend>ros_environment</build_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
